--- a/.github/workflows/update-strava-activities.yml
+++ b/.github/workflows/update-strava-activities.yml
@@ -2,7 +2,7 @@ name: Update strava activities
 on:
   workflow_dispatch:
   #schedule:
-  #  - cron:  '30 18 * * *'
+    - cron:  '30 18 * * *'
 jobs:
   update-strava-history:
     name: Update strava activities
@@ -27,8 +27,8 @@ jobs:
 
       - name: Initialize GIT
         run: |
-          git config --global user.name 'YOUR_GITHUB_USERNAME'
-          git config --global user.email 'YOUR_GITHUB_USERNAME@users.noreply.github.com'
+          git config --global user.name 'rubenbuysse'
+          git config --global user.email 'rubenbuysse@users.noreply.github.com'
 
       - name: Install .env file
         run: |
