--- a/.github/workflows/update-strava-activities.yml
+++ b/.github/workflows/update-strava-activities.yml
@@ -1,7 +1,7 @@
 name: Update strava activities
 on:
   workflow_dispatch:
-  #schedule:
+  schedule:
     - cron:  '30 18 * * *'
 jobs:
   update-strava-history:
